# rust-demo

chat-client/src/: main.rs
chat-server/src/: main.rs
gpu-tool/: Cargo.toml
gpu-tool/src/: main.rs
hello-rocket/: Cargo.toml
hello-rocket/src/: main.rs
m_ex/: Cargo.toml
m_ex/src/mlib/: mod.rs  translate.rs
m_ex/src/mlib/music/: flac.rs  mod.rs  mp3.rs
