[package]
name = "gpu-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ec-gpu = { version = "0.1.0" }
ec-gpu-gen = { version = "0.3.0", default-features = false, features = ["fft", "multiexp"] }
rust-gpu-tools = {version = "0.6.0"}